--- a/src/TheWorld2/config.json
+++ b/src/TheWorld2/config.json
@@ -1,5 +1,8 @@
 ﻿{
   "AppSettings": {
-    "SiteEmailAddress":  "antt@yahoo.com"
+    "SiteEmailAddress": "antt@yahoo.com"
+  },
+  "Data": {
+    "ConnectionString": "Server=(localdb)\\ProjectsV13;Database=TheWorldDB;Trusted_Connection=true;Multipleactiveresultsets=true;"
   }
 }
